fix eslint errors

--- a/www/apps/docs/content/modules/products/storefront/show-products.mdx
+++ b/www/apps/docs/content/modules/products/storefront/show-products.mdx
@@ -613,8 +613,8 @@ fetch(`<BACKEND_URL>/store/products/search`, {
     "Content-Type": "application/json",
   },
   body: JSON.stringify({
-    q: "Shirt"
-  })
+    q: "Shirt",
+  }),
 })
 .then((response) => response.json())
 .then(({ hits }) => {
