--- a/www/apps/docs/content/plugins/file-service/s3.mdx
+++ b/www/apps/docs/content/plugins/file-service/s3.mdx
@@ -121,7 +121,7 @@ const plugins = [
         // optional
         download_file_duration:
           process.env.S3_DOWNLOAD_FILE_DURATION,
-        prefix: process.env.S3_PREFIX
+        prefix: process.env.S3_PREFIX,
     },
   },
 ]
