--- a/www/apps/docs/content/modules/price-lists/backend/override-price-selection-strategy.mdx
+++ b/www/apps/docs/content/modules/price-lists/backend/override-price-selection-strategy.mdx
@@ -26,7 +26,7 @@ import {
   PriceSelectionResult,
 } from "@medusajs/medusa"
 import { 
-  TaxServiceRate
+  TaxServiceRate,
 } from "@medusajs/medusa/dist/types/tax-service"
 
 export default class MyStrategy extends 
@@ -58,7 +58,9 @@ import {
   PriceSelectionContext, 
   PriceSelectionResult,
 } from "@medusajs/medusa"
-import { TaxServiceRate } from "@medusajs/medusa/dist/types/tax-service"
+import { 
+  TaxServiceRate,
+} from "@medusajs/medusa/dist/types/tax-service"
 
 type InjectedDependencies = {
   customerService: CustomerService
