--- a/packages/admin-ui/ui/public/locales/kn/translation.json
+++ b/packages/admin-ui/ui/public/locales/kn/translation.json
@@ -472,9 +472,10 @@
   "price-list-table-delete": "ಅಳಿಸು",
   "price-list-table-name": "ಹೆಸರು",
   "price-list-table-description": "ವಿವರಣೆ",
-  "price-list-table-groups": "{{other}} ಹೆಚ್ಚಿನ",
-  "price-overrides-apply-overrides-on-selected-variants": "ಆಯ್ಕೆಮಾಡಿದ ವಿಭಿನ್ನಗಳ ಮೇಲೆ ಅದ್ದು ಸರಿಪಡಿಸು",
-  "price-overrides-apply-on-all-variants": "ಎಲ್ಲಾ ವಿಭಿನ್ನಗಳ ಮೇಲೆ ಅದ್ದು",
+  "price-list-table-groups": "ಗುಂಪುಗಳು",
+  "price-list-table-other-more": "+ {{other}} ಹೆಚ್ಚು",
+  "price-overrides-apply-overrides-on-selected-variants": "ಆಯ್ಕೆಯಾದ ವೈರಿಯಂಟುಗಳ ಮೇಲೆ ಅಂಶಗಳನ್ನು ಅನ್ವಯಿಸಿ",
+  "price-overrides-apply-on-all-variants": "ಎಲ್ಲಾ ವೈರಿಯಂಟುಗಳ ಮೇಲೆ ಅನ್ವಯಿಸಿ",
   "price-overrides-prices": "ಬೆಲೆಗಳು",
   "price-overrides-cancel": "ರದ್ದು ಮಾಡು",
   "price-overrides-save-and-close": "ಉಳಿಸಿ ಮತ್ತು ಮುಚ್ಚು",
@@ -1816,9 +1817,20 @@
   "usage-insights-active": "ಸಕ್ರಿಯ",
   "usage-insights-share-usage-insights-and-help-us-improve-Medusa": "ಬಳಕೆ ಸೂಚನೆಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಿ ಮತ್ತು ನಮ್ಮನ್ನು ಮೆಡುಸಾ ಸುಧಾರಿಸಲು ಸಹಾಯ ಮಾಡಿ",
   "usage-insights-edit-preferences": "ಆಯ್ಕೆಗಳನ್ನು ಸಂಪಾದಿಸಿ",
-  "region-form-tax-rate-is-required": "ತೆರಿಪು ದರ ಅಗತ್ಯವಿದೆ",
-  "region-form-tax-rate-must-be-equal-to-or-less-than-100": "ತೆರಿಪು ದರ 100 ಅಥವ ಅದಕ್ಕಿಂತ ಕಡಿಮೆ ಆಗಿರಬೇಕು",
-  "region-form-default-tax-code": "ಡೀಫಾಲ್ಟ್ ತೆರಿಪು ಕೋಡ್",
+  "usage-insights-success": "ಯಶಸ್ವಿ",
+  "usage-insights-your-information-was-successfully-updated": "ನಿಮ್ಮ ಮಾಹಿತಿ ಯಶಸ್ವಿಯಾಗಿ ನವೀಕರಿಸಲಾಯಿತು",
+  "usage-insights-error": "ದೋಷ",
+  "usage-insights-cancel": "ರದ್ದುಮಾಡಿ",
+  "usage-insights-submit-and-close": "ಸಲ್ಲಿಸುವಿಕೆ ಮತ್ತು ಮುಚ್ಚಿ",
+  "region-form-title": "ಶೀರ್ಷಿಕೆ",
+  "region-form-europe": "ಯೂರೋಪ್",
+  "region-form-currency-code-is-required": "ಮುದ್ರಾ ಕೋಡು ಅಗತ್ಯ",
+  "region-form-currency": "ಮುದ್ರಾ",
+  "region-form-choose-currency": "ಮುದ್ರಾ ಆಯ್ಕೆಮಾಡಿ",
+  "region-form-default-tax-rate": "ಡಿಫಾಲ್ಟ್ ತೆಕೋದಾರಿ",
+  "region-form-tax-rate-is-required": "ತೆಕೋದಾರಿ ಅಗತ್ಯ",
+  "region-form-tax-rate-must-be-equal-to-or-less-than-100": "ತೆಕೋದಾರಿ 100 ಅಥವ ಅದಕ್ಕಿಂತ ಕಡಿಮೆ ಇರಬೇಕು",
+  "region-form-default-tax-code": "ಡಿಫಾಲ್ಟ್ ತೆಕೋ ಕೋಡ್",
   "region-form-countries": "ದೇಶಗಳು",
   "region-form-choose-countries": "ದೇಶಗಳನ್ನು ಆಯ್ಕೆ ಮಾಡಿ",
   "region-form-tax-inclusive-prices": "ತೆರಿಪು ಸೇರಿಸಿದ ಬೆಲೆಗಳು",
@@ -1894,24 +1906,11 @@
   "shipping-options-add-option": "ಆಪ್ಷನ್ ಸೇರಿಸಿ",
   "shipping-options-enter-specifics-about-available-regional-shipment-methods": "ಲಭ್ಯವಿರುವ ಪ್ರದೇಶದ ಶಿಪಿಂಗ್ ಮೆಥಾಡ್‌ಗಳ ಬಗ್ಗೆ ವಿಶಿಷ್ಟಗಳನ್ನು ನಮೂದಿಸಿ.",
   "new-region-created": "ಪ್ರದೇಶ ಸೃಜಿತವಾಗಿದೆ",
-  "new-create-region": "ಪ್ರದೇಶ ರಚಿಸಿ",
+  "new-create-region": "ಪ್ರದೇಶವನ್ನು ರಚಿಸಿ",
   "new-details": "ವಿವರಗಳು",
-  "new-add-the-region-details": "ಪ್ರದೇಶದ ವಿವರಗಳನ್ನು ಸೇರಿಸಿ.",
-  "personal-information-manage-your-medusa-profile": "ನಿಮ್ಮ ಮೆಡುಸ ಪ್ರೊಫೈಲ್ ನಿರ್ವಹಿಸಿ",
-  "usage-insights-share-usage-insights-and-help-us-improve-medusa": "ಬಳಸಲು ಇನ್ಸೈಟ್ಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಿ ಮತ್ತು ನಮ್ಮ ಮೆಡುಸವನ್ನು ಮೇಲೆ ತಂದು ನಮ್ಮನ್ನು ಸುಧಾರಿಸುವ ಸಹಾಯ ಮಾಡಿ",
-  "usage-insights-success": "ಯಶಸ್ಸು",
-  "usage-insights-your-information-was-successfully-updated": "ನಿಮ್ಮ ಮಾಹಿತಿಯನ್ನು ಯಶಸ್ವಿಯಾಗಿ ನವೀಕರಿಸಲಾಗಿದೆ",
-  "usage-insights-error": "ದೋಷ",
-  "usage-insights-cancel": "ರದ್ದುಮಾಡಿ",
-  "usage-insights-submit-and-close": "ಸಲ್ಲಿಸಿ ಮತ್ತು ಮುಚ್ಚಿ",
-  "region-form-title": "ಶೀರ್ಷಿಕೆ",
-  "region-form-europe": "ಯೂರೋಪ್",
-  "region-form-currency-code-is-required": "ವನಗತ ಕೋಡ್ ಅಗತ್ಯವಿದೆ",
-  "region-form-currency": "ವನಗತ",
-  "region-form-choose-currency": "ವನಗತವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
-  "region-form-default-tax-rate": "ಡಿಫಾಲ್ಟ್ ತೆರಿದು ಹಾಕಿಕೊಳ್ಳಿ",
-  "new-providers": "ಪ್ರೊವೈಡರ್ಗಳು",
-  "new-add-which-fulfillment-and-payment-providers-should-be-available-in-this-region": "ಈ ಪ್ರದೇಶದಲ್ಲಿ ಯಾವ ನೆರವಾಗಿದ್ದು ಪಾವತಿ ಮತ್ತು ಪಾವತಿ ಪ್ರೊವೈಡರ್ಗಳನ್ನು ಸಹಾಯವಾಗಿ ಸೇರಿಸಬೇಕು",
+  "new-add-the-region-details": "ಪ್ರದೇಶದ ವಿವರಗಳನ್ನು ಸೇರಿಸಿ",
+  "new-providers": "ಪ್ರೊವೈಡರ್ಸ್",
+  "new-add-which-fulfillment-and-payment-providers-should-be-available-in-this-region": "ಈ ಪ್ರದೇಶದಲ್ಲಿ ಯಾವ ಸಿಗುವಡಿಗೆ ಮತ್ತು ಪಾವತಿ ಪ್ರೊವೈಡರ್ಸ್ ಲಭ್ಯವಿರಬೇಕೆಂದು ಸೇರಿಸಿ.",
   "region-overview-regions": "ಪ್ರದೇಶಗಳು",
   "region-overview-manage-the-markets-that-you-will-operate-within": "ನೀವು ನಡೆಯುವ ಮಾರುಕಟ್ಟಿನಲ್ಲಿ ನೀವು ಮಾಡುವ ಮಾರುಕಟ್ಟನ್ನು ನಿರ್ವಹಿಸಿ",
   "region-overview-not-configured": "ಆಕೃತಿಸಲಾಗಿಲ್ಲ",
@@ -1950,17 +1949,17 @@
   "taxes-error": "ದೋಷ",
   "taxes-overrides": "ಮಾತ್ರಾಂತರಗಳು",
   "taxes-product-rules": "ಉತ್ಪನ್ನ ವಿಧಾನಗಳು",
-  "taxes-product-rules-description_one": "{{count}} ಉತ್ಪನ್ನವಿದೆ",
-  "taxes-product-rules-description_other": "{{count}} ಉತ್ಪನ್ನವಿದೆ",
-  "taxes-product-type-rules": "ಉತ್ಪನ್ನ ಪ್ರಕಾರದ ವಿಧಾನಗಳು",
-  "taxes-product-type-rules-description_one": "{{count}} ಉತ್ಪನ್ನ ಪ್ರಕಾರವಿದೆ",
-  "taxes-product-type-rules-description_other": "{{count}} ಉತ್ಪನ್ನ ಪ್ರಕಾರವಿದೆ",
-  "taxes-shipping-option-rules": "ಶಿಪಿಂಗ್ ಆಪ್ಷನ್ ವಿಧಾನಗಳು",
-  "taxes-applies-to-shipping-option-with-count_one": "{{count}} ಶಿಪಿಂಗ್ ಆಪ್ಷನ್ ಗಳಿಗೆ ಅನ್ವಯಿಸುತ್ತದೆ",
-  "taxes-applies-to-shipping-option-with-count_other": "{{count}} ಶಿಪಿಂಗ್ ಆಪ್ಷನ್ ಗಳಿಗೆ ಅನ್ವಯಿಸುತ್ತದೆ",
-  "taxes-add-overrides": "ಮಾತ್ರಾಂತರಗಳನ್ನು ಸೇರಿಸಿ",
+  "taxes-product-rules-description_one": "ಗಣಕದ {{count}} ಉತ್ಪಾದನೆWithCount ಗೆ ಅನ್ವಯಿಸುತ್ತದೆ",
+  "taxes-product-rules-description_other": "ಗಣಕದ {{count}} ಉತ್ಪದನೆWithCount ಗೆ ಅನ್ವಯಿಸುತ್ತದೆ",
+  "taxes-product-type-rules": "ಉತ್ಪದನೆ ಪ್ರಕಾರ ನಿಯಮಗಳು",
+  "taxes-product-type-rules-description_one": "{{count}} ಉತ್ಪದನೆ ಪ್ರಕಾರWithCount ಗೆ ಅನ್ವಯಿಸುತ್ತದೆ",
+  "taxes-product-type-rules-description_other": "{{count}} ಉತ್ಪದನೆ ಪ್ರಕಾರWithCount ಗೆ ಅನ್ವಯಿಸುತ್ತದೆ",
+  "taxes-shipping-option-rules": "ಶಿಪಿಂಗ್ ಆಯ್ಕೆ ನಿಯಮಗಳು",
+  "taxes-applies-to-shipping-option-with-count_one": "{{count}} ಶಿಪಿಂಗ್ ಆಯ್ಕೆWithCount ಗೆ ಅನ್ವಯಿಸುತ್ತದೆ",
+  "taxes-applies-to-shipping-option-with-count_other": "{{count}} ಶಿಪಿಂಗ್ ಆಯ್ಕೆWithCount ಗೆ ಅನ್ವಯಿಸುತ್ತದೆ",
+  "taxes-add-overrides": "ಮೇಲ್ಪರಿವರ್ತನೆಗಳನ್ನು ಸೇರಿಸಿ",
   "taxes-cancel": "ರದ್ದುಮಾಡಿ",
-  "taxes-save": "ಉಳಿಸು",
+  "taxes-save": "ಉಳಿಸಿ",
   "taxes-name": "ಹೆಸರು",
   "taxes-default": "ಡಿಫಾಲ್ಟ್",
   "taxes-rate-name": "ದರ ಹೆಸರು",
