--- a/www/apps/api-reference/app/_mdx/client-libraries.mdx
+++ b/www/apps/api-reference/app/_mdx/client-libraries.mdx
@@ -33,6 +33,6 @@ Check out the [quickstart guide](https://docs.medusajs.com/create-medusa-app).
 
 ### Download Full Reference
 
-Download this reference as an OpenApi YAML file. You can import this file to tools like Postman for easier usage.
+Download this reference as an OpenApi YAML file. You can import this file to tools like Postman and start sending requests directly to your Medusa backend.
 
 <DownloadFull />
