--- a/www/apps/docs/content/development/api-routes/example-logged-in-user.mdx
+++ b/www/apps/docs/content/development/api-routes/example-logged-in-user.mdx
@@ -2,7 +2,7 @@
 addHowToData: true
 ---
 
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import ServiceLifetimeSection from '../../troubleshooting/awilix-resolution-error/_service-lifetime.md'
 import CustomRegistrationSection from '../../troubleshooting/awilix-resolution-error/_custom-registration.md'
 
@@ -157,7 +157,7 @@ If you try accessing the API Routes you added the middleware to, you should see 
 
 ## Troubleshooting
 
-<Troubleshooting 
+<DetailsList 
   sections={[
     {
       title: 'AwilixResolutionError: Could Not Resolve X',
