--- a/www/apps/docs/content/plugins/payment/stripe.mdx
+++ b/www/apps/docs/content/plugins/payment/stripe.mdx
@@ -3,7 +3,7 @@ description: 'Learn how to integrate Stripe with the Medusa backend. Learn how t
 addHowToData: true
 ---
 
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import MissingPaymentProvider from '../../troubleshooting/missing-payment-providers.md'
 
 # Stripe
@@ -384,7 +384,7 @@ This plugin handles the following Stripe webhook events:
 
 ## Troubleshooting
 
-<Troubleshooting
+<DetailsList
   sections={[
     {
       title: 'Stripe not showing in checkout',
