--- a/www/apps/docs/content/starters/nextjs-medusa-starter.mdx
+++ b/www/apps/docs/content/starters/nextjs-medusa-starter.mdx
@@ -5,7 +5,7 @@ description: 'Learn how to get started with a Next.js storefront and Medusa. The
 
 import Feedback from '@site/src/components/Feedback';
 import QueryNote from '@site/src/components/QueryNote';
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import ModuleXErrorSection from '../troubleshooting/common-installation-errors/_module-x-error.mdx'
 import CorsErrorSection from '../troubleshooting/cors-issues.md'
 
@@ -126,7 +126,7 @@ Your Next.js Starter Storefront is now running at `localhost:8000`
 
 ## Troubleshooting Installation
 
-<Troubleshooting
+<DetailsList
   sections={[
     {
       title: 'CORS Error',
