--- a/www/apps/docs/content/admin/quickstart.mdx
+++ b/www/apps/docs/content/admin/quickstart.mdx
@@ -4,7 +4,7 @@ addHowToData: true
 ---
 
 import Feedback from '@site/src/components/Feedback';
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import AdminLoginSection from '../troubleshooting/signing-in-to-admin.md'
 import CorsSection from '../troubleshooting/cors-issues.md'
 
@@ -179,7 +179,7 @@ Can't find your language? Learn how you can contribute by translating the admin 
 
 ## Troubleshooting Installation
 
-<Troubleshooting
+<DetailsList
   sections={[
     {
       title: 'Signing into Admin',
