--- a/www/apps/docs/content/deployments/storefront/deploying-next-on-vercel.mdx
+++ b/www/apps/docs/content/deployments/storefront/deploying-next-on-vercel.mdx
@@ -3,7 +3,7 @@ description: 'Learn step-by-step.'
 addHowToData: true
 ---
 
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import CorsErrorSection from '../../troubleshooting/cors-issues.md'
 
 # Deploy Next.js Starter Template on Vercel
@@ -166,7 +166,7 @@ Then, restart your Medusa backend. Once the backend is running again, you can us
 
 ## Troubleshooting
 
-<Troubleshooting
+<DetailsList
   sections={[
     {
       title: 'CORS Error',
