--- a/www/apps/docs/content/development/api-routes/add-middleware-express-route.mdx
+++ b/www/apps/docs/content/development/api-routes/add-middleware-express-route.mdx
@@ -2,7 +2,7 @@
 addHowToData: true
 ---
 
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import ServiceLifetimeSection from '../../troubleshooting/awilix-resolution-error/_service-lifetime.md'
 import CustomRegistrationSection from '../../troubleshooting/awilix-resolution-error/_custom-registration.md'
 
@@ -200,7 +200,7 @@ export default ProductService
 
 ## Troubleshooting
 
-<Troubleshooting 
+<DetailsList 
   sections={[
     {
       title: 'AwilixResolutionError: Could Not Resolve X',
