--- a/www/apps/docs/content/development/backend/install.mdx
+++ b/www/apps/docs/content/development/backend/install.mdx
@@ -6,7 +6,7 @@ addHowToData: true
 import Feedback from '@site/src/components/Feedback';
 import DocCardList from '@theme/DocCardList';
 import Icons from '@theme/Icon';
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import SaslSection from '../../troubleshooting/database-errors/_sasl.md'
 import ConnectionErrorSection from '../../troubleshooting/database-errors/_connection-error.md'
 import FreshInstallationSection from '../../troubleshooting/awilix-resolution-error/_fresh-installation.md'
@@ -92,7 +92,7 @@ curl localhost:9000/store/products
 
 ## Troubleshooting Installation
 
-<Troubleshooting
+<DetailsList
   sections={[
     {
       title: 'Error: SASL: SCRAM-SERVER-FIRST-MESSAGE: Client password must be a string',
