--- a/www/apps/docs/content/development/services/create-service.mdx
+++ b/www/apps/docs/content/development/services/create-service.mdx
@@ -2,7 +2,7 @@
 addHowToData: true
 ---
 
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import ServiceLifetimeSection from '../../troubleshooting/awilix-resolution-error/_service-lifetime.md'
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -406,7 +406,7 @@ class MySubscriber {
 
 ## Troubleshooting
 
-<Troubleshooting 
+<DetailsList 
   sections={[
     {
       title: 'AwilixResolutionError: Could Not Resolve X',
