--- a/www/apps/docs/content/development/services/extend-service.mdx
+++ b/www/apps/docs/content/development/services/extend-service.mdx
@@ -2,7 +2,7 @@
 addHowToData: true
 ---
 
-import Troubleshooting from '@site/src/components/Troubleshooting'
+import DetailsList from '@site/src/components/DetailsList'
 import ServiceLifetimeSection from '../../troubleshooting/awilix-resolution-error/_service-lifetime.md'
 
 # How to Extend a Service
@@ -91,7 +91,7 @@ You should see the customizations you made in effect.
 
 ## Troubleshooting
 
-<Troubleshooting 
+<DetailsList 
   sections={[
     {
       title: 'AwilixResolutionError: Could Not Resolve X (Service Lifetime)',
