chore(docs): Generated References (automated)

--- a/www/apps/docs/content/references/js-client/auth/classes/auth.AuthResource.mdx
+++ b/www/apps/docs/content/references/js-client/auth/classes/auth.AuthResource.mdx
@@ -246,7 +246,7 @@ ___
       {
         "name": "StoreBearerAuthRes",
         "type": "`object`",
-        "description": "#### Schema StoreBearerAuthRes type: object properties: accessToken: description: Access token for subsequent authorization. type: string",
+        "description": "#### Schema StoreBearerAuthRes type: object properties: access_token: description: Access token that can be used to send authenticated requests. type: string",
         "optional": false,
         "defaultValue": "",
         "children": []
