--- a/www/apps/docs/content/references/js-client/admin_auth/classes/admin_auth.AdminAuthResource.mdx
+++ b/www/apps/docs/content/references/js-client/admin_auth/classes/admin_auth.AdminAuthResource.mdx
@@ -191,7 +191,7 @@ ___
       {
         "name": "AdminBearerAuthRes",
         "type": "`object`",
-        "description": "#### Schema AdminBearerAuthRes type: object properties: accessToken: description: Access token for subsequent authorization. type: string",
+        "description": "#### Schema AdminBearerAuthRes type: object properties: access_token: description: Access token that can be used to send authenticated requests. type: string",
         "optional": false,
         "defaultValue": "",
         "children": []
