--- a/www/apps/docs/content/references/js-client/internal/modules/admin_discounts.internal.internal.mdx
+++ b/www/apps/docs/content/references/js-client/internal/modules/admin_discounts.internal.internal.mdx
@@ -5756,8 +5756,8 @@ ___
 StoreBearerAuthRes
 type: object
 properties:
-  accessToken:
-    description: Access token for subsequent authorization.
+  access_token:
+    description: Access token that can be used to send authenticated requests.
     type: string
 
 #### Type declaration
