--- a/www/apps/docs/content/references/pricing/interfaces/FilterablePriceSetMoneyAmountProps.mdx
+++ b/www/apps/docs/content/references/pricing/interfaces/FilterablePriceSetMoneyAmountProps.mdx
@@ -6,7 +6,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
 
 # FilterablePriceSetMoneyAmountProps
 
-An object used to allow specifying flexible queries with and/or conditions.
+Filters to apply on price set money amounts.
 
 ## Properties
 
@@ -30,7 +30,7 @@ An object used to allow specifying flexible queries with and/or conditions.
   {
     "name": "id",
     "type": "`string`[]",
-    "description": "",
+    "description": "The IDs to filter the price set money amounts by.",
     "optional": true,
     "defaultValue": "",
     "children": []
@@ -38,7 +38,7 @@ An object used to allow specifying flexible queries with and/or conditions.
   {
     "name": "price_set_id",
     "type": "`string`[]",
-    "description": "",
+    "description": "The IDs to filter the price set money amount's associated price set.",
     "optional": true,
     "defaultValue": "",
     "children": []
