--- a/packages/translation/package.json
+++ b/packages/translation/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@medusajs/admin": "^7.1.3",
     "@medusajs/medusa": "^1.17.0",
+    "@medusajs/types": "workspace:^",
     "@tanstack/react-table": "^8.7.9",
     "awilix": "^8.0.1",
     "cross-env": "^5.2.1",
@@ -47,7 +48,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "medusa-core-utils": "^1.2.0",
-    "typeorm": "0.3.17"
+    "typeorm": "0.3.17",
+    "@medusajs/utils": "workspace:^"
   },
   "gitHead": "81a7ff73d012fda722f6e9ef0bd9ba0232d37808",
   "keywords": [
