fix broken link

--- a/www/apps/docs/content/js-client/overview.mdx
+++ b/www/apps/docs/content/js-client/overview.mdx
@@ -68,7 +68,7 @@ Make sure to set `moduleResolution` in your `tsconfig.json` to `nodenext` or `no
 
 You'll find in the sidebar of this reference names of different resources. These resources are properties in the Medusa client instance you initialize. You can access the methods or nested resources of each of the properties to send requests to the backend.
 
-For example, to create a new customer you can access the [create](../references/js-client/customers/classes/customers.CustomersResource.mdx#create) method under the [customers](../references/js-client/customers/classes/customers.CustomersResource.mdx) property of your client:
+For example, to create a new customer you can access the [create](../references/js-client/customers/classes/customers.CustomerResource.mdx#create) method under the [customers](../references/js-client/customers/classes/customers.CustomerResource.mdx) property of your client:
 
 ```ts
 import Medusa from "@medusajs/medusa-js"
